--- a/views/self.html
+++ b/views/self.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        window.onload = '/index.html'
+    </script>
 </body>
 </html>
