--- a/views/self.html
+++ b/views/self.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        window.onload = '/index.html'
+        window.location.href='../views/index.html'
     </script>
 </body>
 </html>
